Login and Logout

--- a/Ass_HE190424_System_Manage_LeaveApplication/web/index.html
+++ b/Ass_HE190424_System_Manage_LeaveApplication/web/index.html
@@ -1,15 +1,68 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit this template
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <title>Hệ thống Quản lý Nghỉ phép</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f0f2f5;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #007bff;
+            color: white;
+            padding: 15px;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background: #fff;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        nav a {
+            padding: 14px 20px;
+            text-decoration: none;
+            color: #007bff;
+            font-weight: bold;
+        }
+        nav a:hover {
+            background: #007bff;
+            color: white;
+        }
+        .content {
+            text-align: center;
+            margin-top: 50px;
+        }
+        button {
+            padding: 10px 20px;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+        button:hover {
+            background: #0056b3;
+        }
+    </style>
+</head>
+<body>
+<header>
+    <h1>HỆ THỐNG QUẢN LÝ NGHỈ PHÉP</h1>
+</header>
+
+<nav>
+    <a href="#">Trang chủ</a>
+    <a href="login">Đăng nhập</a>
+    <a href="#">Liên hệ</a>
+</nav>
+
+<div class="content">
+    <h2>Chào mừng bạn đến với hệ thống!</h2>
+    <p>Vui lòng đăng nhập để sử dụng các chức năng quản lý đơn nghỉ phép.</p>
+    <a href="login"><button>Đăng nhập ngay</button></a>
+</div>
+</body>
 </html>
